@@ -1,3 +1,8 @@
+2022-08-09  Andreas Schwab  <schwab@suse.de>
+
+	* elflint.c (check_program_header): Don't complain about p_filesz
+	> p_memsz if p_memsz is zero and p_type is PT_RISCV_ATTRIBUTES.
+
 2022-08-01  Mark Wielaard  <mark@klomp.org>
 
 	* readelf.c (handle_dynamic): Pass start of buffer to memrchr.
